--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
-    "egg-view-nunjucks": "^2.2.0"
+    "egg-view-nunjucks": "^2.2.0",
+    "moment": "^2.22.2"
   },
   "devDependencies": {
     "autod": "^3.0.1",
