--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-bcrypt": "^1.1.0",
+    "egg-cors": "^2.0.0",
+    "egg-jwt": "^3.0.0",
     "egg-mysql": "^3.0.0",
+    "egg-passport": "^2.0.1",
     "egg-scripts": "^2.5.0",
+    "egg-validate": "^1.0.0",
     "egg-view-nunjucks": "^2.2.0",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
