--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "egg-mysql": "^3.0.0",
     "egg-passport": "^2.0.1",
     "egg-scripts": "^2.5.0",
+    "egg-sequelize": "^3.1.4",
     "egg-validate": "^1.0.0",
     "egg-view-nunjucks": "^2.2.0",
     "moment": "^2.22.2",
+    "mysql2": "^1.5.3",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
@@ -39,7 +41,10 @@
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
-    "autod": "autod"
+    "autod": "autod",
+    "migrate:new": "egg-sequelize migration:create",
+    "migrate:up": "egg-sequelize db:migrate",
+    "migrate:down": "egg-sequelize db:migrate:undo"
   },
   "ci": {
     "version": "8"
