--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "dataloader": "^1.4.0",
     "egg": "^2.2.1",
     "egg-bcrypt": "^1.1.0",
     "egg-cors": "^2.0.0",
+    "egg-graphql": "^2.1.0",
     "egg-jwt": "^3.0.0",
     "egg-mysql": "^3.0.0",
     "egg-passport": "^2.0.1",
@@ -14,6 +16,7 @@
     "egg-sequelize": "^3.1.4",
     "egg-validate": "^1.0.0",
     "egg-view-nunjucks": "^2.2.0",
+    "graphql": "^0.13.2",
     "moment": "^2.22.2",
     "mysql2": "^1.5.3",
     "passport-local": "^1.0.0"
